# lab7

./: CMakeLists.txt  README.md  lab6.cpp  lab6.hpp  laboratornaya6.cpp
inc/: lab6.hpp
